Add Databricks side Delete Connection implementation (#43)
